infer/tests/codetoanalyze/go/biabduction/simple_multi_file_npe_1.go
package empty

func foo(a int) int {
	var n int = 42
	var p *int = bar(a, &n)
	return *p // error
}
